--- a/style.css
+++ b/style.css
@@ -92,7 +92,6 @@ html[data-theme='dark'] body {
 /* App Container */
 .app-container {
     display: flex;
-    position: relative; /* Added for positioning loading spinner */
     width: 90%; /* Make it wider */
     height: 90vh; /* Make it slightly less tall */
     overflow: hidden;
@@ -329,7 +328,7 @@ html[data-theme='dark'] .message.my-message {
 
 .message .username {
     font-weight: bold;
-    margin-bottom: 5px;
+    margin-bottom: 2px;
     color: var(--text-username-received-light);
     cursor: pointer;
     transition: color var(--transition-speed);
@@ -445,9 +444,8 @@ html[data-theme='dark'] .typing-indicator {
 /* Loading Spinner */
 .loading-spinner {
     position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
